<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MacrosDetailsActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lblCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_calories" />

    <EditText
        android:id="@+id/txtCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_protein" />

    <EditText
        android:id="@+id/txtProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblCarb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_carb" />

    <EditText
        android:id="@+id/txtCarb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fat" />

    <EditText
        android:id="@+id/txtFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:id="@+id/lblDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MacrosDetailsActivity"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSaveMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveMacros" />
        <Button
            android:id="@+id/btnDeleteMacros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteMacros" />
    </LinearLayout>

</LinearLayout>

