<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetailsActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lblMealDescriptionDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_mealDescription" />

    <EditText
        android:id="@+id/txtMealDescriptionDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblProteinSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_proteinSource" />

    <EditText
        android:id="@+id/txtProteinSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblCarbSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_carbSource" />

    <EditText
        android:id="@+id/txtCarbSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblFatSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fatSource" />

    <EditText
        android:id="@+id/txtFatSourceDV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:id="@+id/lblDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MealDetailsActivity"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSaveMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveMeal" />
        <Button
            android:id="@+id/btnDeleteMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteMeal" />
    </LinearLayout>
</LinearLayout>