<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25">
        <LinearLayout
            android:orientation="horizontal
    "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblDate"
                android:layout_weight="50"
                />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="50"
                app:srcCompat="@drawable/plate"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal
    "
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblCaloriesLV"
                android:text="@string/lbl_calories"
                android:layout_weight="50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblCalorieNumber"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblProteinMacrosLV"
                android:text="@string/lbl_protein"
                android:layout_weight="50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblProteinNumber"
                android:layout_weight="50"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25">
        <LinearLayout
            android:orientation="horizontal
    "
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblCarbMacros"
                android:text="@string/lbl_carb"
                android:layout_weight="50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblCarbNumber"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal
    "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblFatMacros"
                android:text="@string/lbl_fat"
                android:layout_weight="50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/lblFatNumber"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal
    "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:weightSum="100">
            <Button
                android:id="@+id/btnEditMacros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEditMacros" />
            <Button
                android:id="@+id/btnViewMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnViewMeals" />
            <Button
                android:id="@+id/btnViewFoodGroups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnViewFoodGroups" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>