<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblMealDescription"
                android:text="@string/lbl_mealDescription"
                android:layout_weight="50"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/txtMealDescription"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblProteinSource"
                android:text="@string/lbl_proteinSource"
                android:layout_weight="50"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/txtProteinSource"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:weightSum="100">
            <Button
                android:id="@+id/btnEditMeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_EditMeal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblCarbSource"
                android:text="@string/lbl_carbSource"
                android:layout_weight="50"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/txtCarbSource"
                android:layout_weight="50"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:weightSum="100">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/lblFatSource"
                android:text="@string/lbl_fatSource"
                android:layout_weight="50"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:id="@+id/txtFatSource"
                android:layout_weight="50"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>